# hpc-math-core

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt  bench_gemm.cpp  bench_gemm_cuda.cpp
benchmarks/cuda/: CMakeLists.txt
docs/: cache-behavior.md
include/hpc/: matrix.hpp
src/cuda/: gemm_kernels.cu  gemm_kernels_stub.cpp
src/gemm/: README.md  avx2.hpp  avx512.hpp  blocked.hpp  cuda.hpp  naive.hpp  neon.hpp  prefetch.hpp  reordered.hpp  sve.hpp
tests/: CMakeLists.txt  test_gemm.cpp  test_gemm_cuda.cpp
tests/cuda/: CMakeLists.txt
